# learning-rust

boxed_traits/: Cargo.toml
boxed_traits/src/: bar.rs  foo.rs  main.rs  things.rs
builder/: Cargo.toml
builder/src/: main.rs  meal.rs
configs/: Cargo.toml
configs/src/: main.rs
egui/noddy/: Cargo.toml
egui/noddy/src/: main.rs
fn_and_closures/: Cargo.toml
fn_and_closures/src/: main.rs  simple.rs
generics/: Cargo.toml
generics/src/: main.rs
mandelbrot/: Cargo.toml
mandelbrot/src/: main.rs
mandelbrot/src/mndl/: cli.rs  core.rs  dimensions.rs  img.rs  mod.rs  pixel.rs  resolution.rs
networking/client/: Cargo.toml
networking/client/src/: main.rs
networking/server/: Cargo.toml
networking/server/src/: main.rs
optimus/: Cargo.toml
optimus/src/: main.rs
serialisation/: Cargo.toml
serialisation/src/: foo.rs  main.rs
snek/: Cargo.toml  README.md
snek/app/: Cargo.toml
snek/app/src/: main.rs  settings.rs
snek/libs/genetic-algorithm/: Cargo.toml
snek/libs/genetic-algorithm/src/: chromosome.rs  crossover.rs  individual.rs  lib.rs  mutation.rs  selection.rs  statistics.rs
snek/libs/neural-network/: Cargo.toml
snek/libs/neural-network/src/: layer.rs  lib.rs  neuron.rs  topology.rs
snek/libs/snek_ai/: Cargo.toml
snek/libs/snek_ai/src/: lib.rs
snek/libs/snek_core/: Cargo.toml
snek/libs/snek_core/src/: lib.rs  settings.rs  types.rs
snek/libs/snek_core/src/entities/: food.rs  grid.rs  mod.rs  snek.rs
snek/libs/snek_core/src/game/: engine.rs  food.rs  grid.rs  mod.rs  mode.rs  snek.rs  state.rs  types.rs
snek/libs/snek_core/src/players/: mod.rs
snek/libs/snek_core/src/players/human/: player.rs
snek/src/: main.rs
snek/src/game/: food.rs  grid.rs  mod.rs  snek.rs  state.rs
traits_and_generics/: README.md
traits_and_generics/app/: Cargo.toml
traits_and_generics/app/src/: main.rs
traits_and_generics/libs/core_lib/: Cargo.toml
traits_and_generics/libs/core_lib/src/: lib.rs
traits_and_generics/libs/secondary_lib/: Cargo.toml
traits_and_generics/libs/secondary_lib/src/: lib.rs
traits_and_generics/libs/tertiary_lib/: Cargo.toml
traits_and_generics/libs/tertiary_lib/src/: lib.rs
wrapping_generics_and_traits/: Cargo.toml
wrapping_generics_and_traits/src/: main.rs
