[package]
name = "configs"
version = "0.1.0"
authors = ["rufus-stone <60827786+rufus-stone@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
toml = "0.5.8"
directories = "3.0.1"
simple_logger = "1.11.0"
log = "0.4.14"
