[package]
name = "snek"
version = "0.1.0"
authors = ["rufus-stone <60827786+rufus-stone@users.noreply.github.com>"]
edition = "2018"

[dependencies]
snek_core = { path = "../libs/snek_core" }
snek_ai = { path = "../libs/snek_ai" }
simple_logger = "1.11.0"
log = "0.4.14"
glam = { version = "0.14.0", features = ["mint"] }
rand = "0.8.3"
rand_chacha = "0.3.0"
